blog/k8s/prod/stable/app-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: prod.myapp.local
      http:
        paths:
          - path: /static(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service-green
                port:
                  number: 80
          - path: /env-config.js
            pathType: Prefix
            backend:
              service:
                name: client-service-green
                port:
                  number: 80
          - path: /favicon.ico
            pathType: Prefix
            backend:
              service:
                name: client-service-green
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service-green
                port:
                  number: 80
